--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -380,7 +380,7 @@ viewer_tags <- tags$div(
         { selector: 'edge[Likely_functional = \"Other/Unknown\"]',
           style: { 'line-style': 'dotted' } }
       ],
-      layout: { name: 'cose' }
+      layout: { name: 'cose', padding: 30, nodeRepulsion: 9000, idealEdgeLength: 110, animate: false }
     });
 
     function setNodeLabels(show){
@@ -423,7 +423,7 @@ viewer_tags <- tags$div(
           n.style('display', hasVisibleEdge ? 'element' : 'none');
         });
       }
-      cy.layout({ name: 'cose', animate: false }).run();
+      relayout(document.getElementById('layoutSel').value);
     }
 
     function refreshEdgesTable(){
@@ -503,10 +503,31 @@ viewer_tags <- tags$div(
     }
 
     function relayout(name){
-      const opts = (name==='concentric') ? { name, minNodeSpacing: 20 } :
-                   (name==='breadthfirst') ? { name, directed: true, padding: 10 } :
-                   (name==='fcose') ? { name, quality: 'proof', randomize: true } :
-                   { name: 'cose', animate: false };
+      const commonPad = 30;
+      const opts = (name==='concentric') ? { name, minNodeSpacing: 30, padding: commonPad } :
+                   (name==='breadthfirst') ? { name, directed: true, padding: commonPad, spacingFactor: 1.2 } :
+                   (name==='fcose') ? {
+                      name,
+                      quality: 'proof',
+                      randomize: true,
+                      animate: false,
+                      nodeRepulsion: () => 12000,
+                      idealEdgeLength: () => 110,
+                      gravity: 0.5,
+                      nodeSeparation: 120,
+                      nestingFactor: 0.9,
+                      padding: commonPad
+                   } :
+                   {
+                      name: 'cose',
+                      animate: false,
+                      padding: commonPad,
+                      nodeRepulsion: 9000,
+                      idealEdgeLength: 110,
+                      edgeElasticity: 0.25,
+                      gravity: 0.9,
+                      numIter: 1000
+                   };
       cy.layout(opts).run();
     }
 
