updating node repulsion

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -287,6 +287,7 @@ viewer_tags <- tags$div(
   ),
 
   tags$script(src="https://unpkg.com/cytoscape@3.26.0/dist/cytoscape.min.js"),
+  tags$script(src="https://unpkg.com/cytoscape-fcose@2.2.0/cytoscape-fcose.js"),
   tags$script(src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"),
 
   tags$script(HTML("
@@ -384,8 +385,8 @@ viewer_tags <- tags$div(
         name: 'cose',
         animate: false,
         padding: 30,
-        nodeRepulsion: function(){ return 12000; },
-        idealEdgeLength: function(){ return 120; },
+        nodeRepulsion: 12000,
+        idealEdgeLength: 120,
         nodeOverlap: 5,
         componentSpacing: 80,
         gravity: 0.8,
@@ -524,8 +525,8 @@ viewer_tags <- tags$div(
                  quality: 'proof',
                  randomize: true,
                  animate: false,
-                 nodeRepulsion: () => 14000,
-                 idealEdgeLength: () => 120,
+                 nodeRepulsion: 14000,
+                 idealEdgeLength: 120,
                  gravity: 0.35,
                  nodeSeparation: 140,
                  nestingFactor: 0.9,
@@ -535,8 +536,8 @@ viewer_tags <- tags$div(
                  name: 'cose',
                  animate: false,
                  padding: commonPad,
-                 nodeRepulsion: function(){ return 12000; },
-                 idealEdgeLength: function(){ return 120; },
+                 nodeRepulsion: 12000,
+                 idealEdgeLength: 120,
                  nodeOverlap: 5,
                  componentSpacing: 80,
                  edgeElasticity: 0.25,
