updating node repulsion #6

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -382,7 +382,7 @@ viewer_tags <- tags$div(
           style: { 'line-style': 'dotted' } }
       ],
       layout: { name: 'cose',
-        repulsion: 800
+        nodeRepulsion: 109200
       }
     });
 
