updating node replusion #8

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -382,7 +382,7 @@ viewer_tags <- tags$div(
           style: { 'line-style': 'dotted' } }
       ],
       layout: { name: 'cose',
-        nodeRepulsion: 109200
+        nodeOverlap: 20
       }
     });
 
