trying alternate layouts #5

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -288,6 +288,8 @@ viewer_tags <- tags$div(
   ),
 
   tags$script(src="https://unpkg.com/cytoscape@3.26.0/dist/cytoscape.min.js"),
+  tags$script(src="https://unpkg.com/layout-base/layout-base.js"),
+  tags$script(src="https://unpkg.com/cose-base/cose-base.js"),
   tags$script(src="https://unpkg.com/cytoscape-fcose@2.2.0/cytoscape-fcose.js"),
   tags$script(src="https://unpkg.com/cytoscape-cose-bilkent@4.1.0/cytoscape-cose-bilkent.js"),
   tags$script(src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"),
@@ -515,23 +517,25 @@ viewer_tags <- tags$div(
                      quality: 'default',
                      randomize: true,
                      animate: false,
+                     animationDuration: 1000,
                      fit: true,
-                     padding: 40,
+                     padding: 30,
                      nodeDimensionsIncludeLabels: false,
                      uniformNodeDimensions: false,
-                     packComponents: true,
+                     packComponents: false,
                      tile: true,
-                     nodeSeparation: 120,
+                     samplingType: true,
                      sampleSize: 25,
-                     nodeRepulsion: node => 7000,
-                     idealEdgeLength: edge => 140,
+                     nodeSeparation: 90,
+                     nodeRepulsion: node => 4500,
+                     idealEdgeLength: edge => 80,
                      edgeElasticity: edge => 0.45,
                      nestingFactor: 0.1,
                      numIter: 2500,
                      gravity: 0.25,
                      gravityRangeCompound: 1.5,
                      gravityCompound: 1.0,
-                     gravityRange: 3.0,
+                     gravityRange: 3.8,
                      initialEnergyOnIncremental: 0.3
                    } :
                    (name==='cose-bilkent') ? {
